# Projetos_Django

./: README.md
Curso/Modulo_01/: Base_Programacao_Web.txt  CSS.txt  JavaScript.txt  estilos2.css  index.html  pagina1.html  pagina2.html  pagina3.html  script.js
Curso/Modulo_01/estudos_modulo_01/: Base_Programacao_Web.txt  HTML.txt
Curso/Modulo_02/: Introducao_ao_projeto.txt
Primeiro_projeto/: .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml
Primeiro_projeto/core/: admin.py  models.py  views.py
Primeiro_projeto/core/migrations/: 0001_initial.py  0002_cliente.py
Primeiro_projeto/core/static/css/: estilos.css
Primeiro_projeto/core/templates/: 500.html  contato.html  index.html  produto.html
Primeiro_projeto/site_first1/: asgi.py  settings.py  urls.py  wsgi.py
Segundo_projeto/django2/: pyproject.toml
Segundo_projeto/django2/core/: admin.py  forms.py  models.py  urls.py  views.py
Segundo_projeto/django2/core/migrations/: 0001_initial.py  0002_alter_produto_estoque.py  0003_alter_produto_ativo_alter_produto_nome.py
Segundo_projeto/django2/core/templates/: contato.html  index.html  produto.html  ptoduto.html
Segundo_projeto/django2/django2/: asgi.py  settings.py  urls.py  wsgi.py
