[tool.poetry]
name = "django2"
version = "0.1.0"
description = ""
authors = ["Vitor Kruel102 <vkruel.programador@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
PyMySQL = "^1.0.2"
django-stdimage = "^6.0.1"
mysql = "^0.0.3"
bootstrap4 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
